--- a/3D-Engine/Game/imgui.ini
+++ b/3D-Engine/Game/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
 Pos=60,60
-Size=400,400
+Size=400,200
 Collapsed=0
 
 [Window][Hello World!]
@@ -31,5 +31,10 @@ Collapsed=0
 [Window][Configuration]
 Pos=234,252
 Size=693,713
+Collapsed=0
+
+[Window][Console]
+Pos=218,110
+Size=419,240
 Collapsed=0
 
