full desktop & App name

--- a/Factory Engin3D/Game/imgui.ini
+++ b/Factory Engin3D/Game/imgui.ini
@@ -9,8 +9,8 @@ Size=423,183
 Collapsed=0
 
 [Window][ImGui Demo]
-Pos=669,33
-Size=567,406
+Pos=268,-31
+Size=627,1011
 Collapsed=0
 
 [Window][MathGeoLib]
