new trasnform window
Can get and set position and size.
Missing rotation

--- a/Factory Engin3D/Game/imgui.ini
+++ b/Factory Engin3D/Game/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=87,81
-Size=600,282
+Pos=130,114
+Size=400,200
 Collapsed=0
 
 [Window][Hello World!]
@@ -24,17 +24,22 @@ Size=500,236
 Collapsed=0
 
 [Window][About]
-Pos=1362,615
-Size=550,406
+Pos=1260,700
+Size=825,573
 Collapsed=0
 
 [Window][Configuration]
-Pos=562,762
-Size=796,255
+Pos=846,700
+Size=1194,360
+Collapsed=0
+
+[Window][Transform]
+Pos=706,319
+Size=820,532
 Collapsed=0
 
 [Window][Console]
-Pos=0,776
-Size=559,238
+Pos=0,700
+Size=838,336
 Collapsed=0
 
