--- a/Factory Engin3D/Factory Engin3D.vcxproj
+++ b/Factory Engin3D/Factory Engin3D.vcxproj
@@ -76,6 +76,7 @@
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="Color.h" />
+    <ClInclude Include="Component.h" />
     <ClInclude Include="DevIL\includex86\IL\devil_cpp_wrapper.hpp" />
     <ClInclude Include="DevIL\includex86\IL\devil_internal_exports.h" />
     <ClInclude Include="DevIL\includex86\IL\il.h" />
@@ -84,6 +85,7 @@
     <ClInclude Include="DevIL\includex86\IL\ilut_config.h" />
     <ClInclude Include="DevIL\includex86\IL\ilu_region.h" />
     <ClInclude Include="DevIL\includex86\IL\il_wrap.h" />
+    <ClInclude Include="GameObject.h" />
     <ClInclude Include="Geometries.h" />
     <ClInclude Include="glew-2.1.0\include\GL\eglew.h" />
     <ClInclude Include="glew-2.1.0\include\GL\glew.h" />
@@ -170,6 +172,7 @@
     <ClInclude Include="parson\parson.h" />
     <ClInclude Include="Geometry.h" />
     <ClInclude Include="Timer.h" />
+    <ClInclude Include="Transform.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
@@ -224,6 +227,7 @@
     <ClCompile Include="parson\parson.c" />
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="Timer.cpp" />
+    <ClCompile Include="Transform.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
