--- a/Factory Engin3D/Factory Engin3D.vcxproj.filters
+++ b/Factory Engin3D/Factory Engin3D.vcxproj.filters
@@ -55,6 +55,9 @@
     <Filter Include="Sources\GameObject\Geometries">
       <UniqueIdentifier>{ea7f7de3-117a-461b-bccf-b4df756ef03d}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Sources\GameObject\Component">
+      <UniqueIdentifier>{946cc1eb-e97b-4223-b90c-82e70d8a51d1}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Module.h">
@@ -333,9 +336,6 @@
     <ClInclude Include="Mesh.h">
       <Filter>Sources\GameObject\Geometries</Filter>
     </ClInclude>
-    <ClInclude Include="Light.h">
-      <Filter>Sources\GameObject</Filter>
-    </ClInclude>
     <ClInclude Include="Geometries.h">
       <Filter>Sources\GameObject\Geometries</Filter>
     </ClInclude>
@@ -344,6 +344,18 @@
     </ClInclude>
     <ClInclude Include="Importer.h">
       <Filter>Sources\Helpers</Filter>
+    </ClInclude>
+    <ClInclude Include="Light.h">
+      <Filter>Sources\GameObject\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="Transform.h">
+      <Filter>Sources\GameObject\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="Component.h">
+      <Filter>Sources\GameObject\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject.h">
+      <Filter>Sources\GameObject</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -494,14 +506,17 @@
     <ClCompile Include="ModuleGeometryManager.cpp">
       <Filter>Sources\Modules</Filter>
     </ClCompile>
-    <ClCompile Include="Light.cpp">
-      <Filter>Sources\GameObject</Filter>
-    </ClCompile>
     <ClCompile Include="Geometry.cpp">
       <Filter>Sources\GameObject\Geometries</Filter>
     </ClCompile>
     <ClCompile Include="Mesh.cpp">
       <Filter>Sources\GameObject\Geometries</Filter>
+    </ClCompile>
+    <ClCompile Include="Light.cpp">
+      <Filter>Sources\GameObject\Component</Filter>
+    </ClCompile>
+    <ClCompile Include="Transform.cpp">
+      <Filter>Sources\GameObject\Component</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
