Module Importe on correct folder

--- a/Factory Engin3D/Factory Engin3D.vcxproj.filters
+++ b/Factory Engin3D/Factory Engin3D.vcxproj.filters
@@ -318,9 +318,6 @@
     <ClInclude Include="Geometry.h">
       <Filter>Sources\GameObject\Geometries</Filter>
     </ClInclude>
-    <ClInclude Include="ModuleImporter.h">
-      <Filter>Sources\Helpers</Filter>
-    </ClInclude>
     <ClInclude Include="imgui-1.65\imconfig.h">
       <Filter>Sources\Containers\ImGui</Filter>
     </ClInclude>
@@ -344,6 +341,9 @@
     </ClInclude>
     <ClInclude Include="imgui-1.65\imstb_truetype.h">
       <Filter>Sources\Containers\ImGui</Filter>
+    </ClInclude>
+    <ClInclude Include="ModuleImporter.h">
+      <Filter>Sources\Modules</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -485,9 +485,6 @@
     <ClCompile Include="Mesh.cpp">
       <Filter>Sources\GameObject\Geometries</Filter>
     </ClCompile>
-    <ClCompile Include="ModuleImporter.cpp">
-      <Filter>Sources\Helpers</Filter>
-    </ClCompile>
     <ClCompile Include="imgui-1.65\imgui.cpp">
       <Filter>Sources\Containers\ImGui</Filter>
     </ClCompile>
@@ -505,6 +502,9 @@
     </ClCompile>
     <ClCompile Include="imgui-1.65\imgui_widgets.cpp">
       <Filter>Sources\Containers\ImGui</Filter>
+    </ClCompile>
+    <ClCompile Include="ModuleImporter.cpp">
+      <Filter>Sources\Modules</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
