--- a/Factory Engin3D/Factory Engin3D.vcxproj
+++ b/Factory Engin3D/Factory Engin3D.vcxproj
@@ -169,6 +169,7 @@
     <ClInclude Include="ModuleWindow.h" />
     <ClInclude Include="parson\parson.h" />
     <ClInclude Include="Geometry.h" />
+    <ClInclude Include="Quadtree.h" />
     <ClInclude Include="Timer.h" />
   </ItemGroup>
   <ItemGroup>
@@ -224,6 +225,7 @@
     <ClCompile Include="ModuleWindow.cpp" />
     <ClCompile Include="parson\parson.c" />
     <ClCompile Include="Geometry.cpp" />
+    <ClCompile Include="Quadtree.cpp" />
     <ClCompile Include="Timer.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
