--- a/Factory Engin3D/Factory Engin3D.vcxproj.filters
+++ b/Factory Engin3D/Factory Engin3D.vcxproj.filters
@@ -533,9 +533,6 @@
     <ClCompile Include="Light.cpp">
       <Filter>Sources\GameObject\Component</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\Factory_Engin3D-87bce15ffc57e6ce5da696b34db50cafe215dcbe\Factory Engin3D\Transform.cpp">
-      <Filter>Sources\GameObject\Component</Filter>
-    </ClCompile>
     <ClCompile Include="Camera.cpp">
       <Filter>Sources\GameObject\Component</Filter>
     </ClCompile>
@@ -546,6 +543,9 @@
       <Filter>Sources\GameObject</Filter>
     </ClCompile>
     <ClCompile Include="Texture.cpp">
+      <Filter>Sources\GameObject\Component</Filter>
+    </ClCompile>
+    <ClCompile Include="Transform.cpp">
       <Filter>Sources\GameObject\Component</Filter>
     </ClCompile>
   </ItemGroup>
