--- a/Factory Engin3D/Factory Engin3D.vcxproj.filters
+++ b/Factory Engin3D/Factory Engin3D.vcxproj.filters
@@ -351,9 +351,6 @@
     <ClInclude Include="Light.h">
       <Filter>Sources\GameObject\Component</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\Factory_Engin3D-87bce15ffc57e6ce5da696b34db50cafe215dcbe\Factory Engin3D\Transform.h">
-      <Filter>Sources\GameObject\Component</Filter>
-    </ClInclude>
     <ClInclude Include="Camera.h">
       <Filter>Sources\GameObject\Component</Filter>
     </ClInclude>
@@ -367,6 +364,9 @@
       <Filter>Sources\GameObject\Component</Filter>
     </ClInclude>
     <ClInclude Include="Component.h">
+      <Filter>Sources\GameObject\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="Transform.h">
       <Filter>Sources\GameObject\Component</Filter>
     </ClInclude>
   </ItemGroup>
