--- a/Factory Engin3D/Game/imgui.ini
+++ b/Factory Engin3D/Game/imgui.ini
@@ -44,7 +44,12 @@ Size=355,287
 Collapsed=0
 
 [Window][Scene]
-Pos=2,223
+Pos=0,225
 Size=295,354
+Collapsed=0
+
+[Window][]
+Pos=547,25
+Size=185,40
 Collapsed=0
 
