--- a/Factory Engin3D/Factory Engin3D.vcxproj.filters
+++ b/Factory Engin3D/Factory Engin3D.vcxproj.filters
@@ -61,6 +61,9 @@
     <Filter Include="Sources\Containers\ImGui\Guizmo">
       <UniqueIdentifier>{55651df5-a11d-41d3-bca9-442a5baa29a3}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Sources\Containers\PCG">
+      <UniqueIdentifier>{078b7319-de84-4e9b-a8cb-9702de797d35}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Module.h">
@@ -381,6 +384,9 @@
     <ClInclude Include="ModuleTimeManager.h">
       <Filter>Sources\Modules</Filter>
     </ClInclude>
+    <ClInclude Include="pcg-c-basic-0.9\pcg_basic.h">
+      <Filter>Sources\Containers\PCG</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="ModuleCamera3D.cpp">
@@ -568,6 +574,9 @@
     </ClCompile>
     <ClCompile Include="ModuleTimeManager.cpp">
       <Filter>Sources\Modules</Filter>
+    </ClCompile>
+    <ClCompile Include="pcg-c-basic-0.9\pcg_basic.c">
+      <Filter>Sources\Containers\PCG</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
