Rename Modules & quadtree

--- a/Factory Engin3D/Factory Engin3D.vcxproj
+++ b/Factory Engin3D/Factory Engin3D.vcxproj
@@ -88,7 +88,7 @@
     <ClInclude Include="DevIL\includex86\IL\il_wrap.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="ImGuizmo\ImGuizmo.h" />
-    <ClInclude Include="ModuleGameObjectManager.h" />
+    <ClInclude Include="ModuleGameObject.h" />
     <ClInclude Include="Geometries.h" />
     <ClInclude Include="glew-2.1.0\include\GL\eglew.h" />
     <ClInclude Include="glew-2.1.0\include\GL\glew.h" />
@@ -165,19 +165,19 @@
     <ClInclude Include="MathGeoLib\Time\Clock.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="ModuleCamera3D.h" />
-    <ClInclude Include="ModuleGeometryManager.h" />
+    <ClInclude Include="ModuleGeometry.h" />
     <ClInclude Include="ModuleImGui.h" />
     <ClInclude Include="ModulePicking.h" />
     <ClInclude Include="ModuleRenderer3D.h" />
     <ClInclude Include="Module.h" />
     <ClInclude Include="ModuleInput.h" />
     <ClInclude Include="ModuleSceneIntro.h" />
-    <ClInclude Include="ModuleTimeManager.h" />
+    <ClInclude Include="ModuleTime.h" />
     <ClInclude Include="ModuleWindow.h" />
     <ClInclude Include="parson\parson.h" />
     <ClInclude Include="Geometry.h" />
     <ClInclude Include="pcg-c-basic-0.9\pcg_basic.h" />
-    <ClInclude Include="Quadtree.h" />
+    <ClInclude Include="Octree.h" />
     <ClInclude Include="Texture.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Transform.h" />
@@ -189,7 +189,7 @@
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Globals.cpp" />
     <ClCompile Include="ImGuizmo\ImGuizmo.cpp" />
-    <ClCompile Include="ModuleGameObjectManager.cpp" />
+    <ClCompile Include="ModuleGameObject.cpp" />
     <ClCompile Include="imgui-1.65\imgui.cpp" />
     <ClCompile Include="imgui-1.65\imgui_demo.cpp" />
     <ClCompile Include="imgui-1.65\imgui_draw.cpp" />
@@ -230,7 +230,7 @@
     <ClCompile Include="MathGeoLib\Math\TransformOps.cpp" />
     <ClCompile Include="MathGeoLib\Time\Clock.cpp" />
     <ClCompile Include="Mesh.cpp" />
-    <ClCompile Include="ModuleGeometryManager.cpp" />
+    <ClCompile Include="ModuleGeometry.cpp" />
     <ClCompile Include="ModuleImGui.cpp" />
     <ClCompile Include="ModuleCamera3D.cpp" />
     <ClCompile Include="ModuleImporter.cpp" />
@@ -238,12 +238,12 @@
     <ClCompile Include="ModulePicking.cpp" />
     <ClCompile Include="ModuleRenderer3D.cpp" />
     <ClCompile Include="ModuleSceneIntro.cpp" />
-    <ClCompile Include="ModuleTimeManager.cpp" />
+    <ClCompile Include="ModuleTime.cpp" />
     <ClCompile Include="ModuleWindow.cpp" />
     <ClCompile Include="parson\parson.c" />
     <ClCompile Include="Geometry.cpp" />
     <ClCompile Include="pcg-c-basic-0.9\pcg_basic.c" />
-    <ClCompile Include="Quadtree.cpp" />
+    <ClCompile Include="Octree.cpp" />
     <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="Transform.cpp" />
